# ee-env-python

./: Untitled.ipynb  flake.nix  mainscript.ipynb  pyproject.toml
.ipynb_checkpoints/: hw6-checkpoint.ipynb
